testing Google tags

--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MF6DGZ8N');</script>
+  <!-- Google Tag Manager (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6ZP76Y74Y"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Q6ZP76Y74Y');
+  </script>
   <!-- End Google Tag Manager -->
-<title>Arizona Esthetics Institute | Christie Stephenson Saavedra</title>
+  <title>Arizona Esthetics Institute | Christie Stephenson Saavedra</title>
   <meta name="description" content="Vocational training program case study - State-approved esthetics curriculum.">
   <link rel="icon" type="image/svg+xml" href="../favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,10 +107,6 @@
   </style>
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MF6DGZ8N"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <div class="page-wrapper">
     <nav class="nav" id="nav"><div class="nav-bg"><div class="nav-container"><a href="../index.html" class="nav-back"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>Back to Portfolio</a><a href="../index.html" class="nav-logo">Christie Stephenson Saavedra</a></div></div></nav>
     <section class="hero"><div class="hero-container"><div class="hero-meta"><span class="hero-role">Instructional Designer / Co-founder</span><span class="hero-org">Arizona Esthetics Institute</span></div><h1 class="hero-title">Arizona Esthetics Institute</h1><p class="hero-summary">Co-founding and launching a state-approved vocational training school for esthetics—from curriculum design to facility build-out.</p><div class="results-banner"><div class="result-card"><div class="result-number">State</div><div class="result-label">Approved Curriculum</div></div><div class="result-card"><div class="result-number">Accredited</div><div class="result-label">Trade School</div></div><div class="result-card"><div class="result-number">At-Risk</div><div class="result-label">Youth Pathways</div></div></div></div></section>
