--- a/arizona-esthetics-case-study.html
+++ b/arizona-esthetics-case-study.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
   <!-- Google Tag Manager (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6ZP76Y74Y"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKJH0YKZT5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-Q6ZP76Y74Y');
+    gtag('config', 'G-TKJH0YKZT5');
   </script>
   <!-- End Google Tag Manager -->
     <title>Arizona Esthetics Institute Case Study | Christie Saavedra</title>
