--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Tag Manager (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6ZP76Y74Y"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKJH0YKZT5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-Q6ZP76Y74Y');
+    gtag('config', 'G-TKJH0YKZT5');
   </script>
   <!-- End Google Tag Manager -->
 <title>Healthcare Dashboard Demo | Christie Stephenson Saavedra</title>
