--- a/palmview-lab.html
+++ b/palmview-lab.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MF6DGZ8N');</script>
+  <!-- Google Tag Manager (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKJH0YKZT5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TKJH0YKZT5');
+  </script>
   <!-- End Google Tag Manager -->
 <title>Palmview K-8 Computer Lab | Christie Stephenson Saavedra</title>
   <meta name="description" content="Technology documentation and support case study - 500+ devices managed.">
@@ -103,10 +106,6 @@
   </style>
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MF6DGZ8N"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <div class="page-wrapper">
     <nav class="nav" id="nav"><div class="nav-bg"><div class="nav-container"><a href="../index.html" class="nav-back"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>Back to Portfolio</a><a href="../index.html" class="nav-logo">Christie Stephenson Saavedra</a></div></div></nav>
     <section class="hero"><div class="hero-container"><div class="hero-meta"><span class="hero-role">Computer Lab Manager</span><span class="hero-org">Palmview K-8</span></div><h1 class="hero-title">Palmview K-8 Computer Lab</h1><p class="hero-summary">Managing technology operations and building documentation systems for a K-8 school with hundreds of devices across multiple platforms.</p><div class="results-banner"><div class="result-card"><div class="result-number">500+</div><div class="result-label">Devices Managed</div></div><div class="result-card"><div class="result-number">3</div><div class="result-label">Device Platforms</div></div><div class="result-card"><div class="result-number">â†“</div><div class="result-label">Repeat Requests Reduced</div></div></div></div></section>
