--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -3,19 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Tag Manager (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKJH0YKZT5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-TKJH0YKZT5');
-  </script>
-  <!-- End Google Tag Manager -->
   <title>Arizona Esthetics Institute | Christie Stephenson Saavedra</title>
   <meta name="description" content="Vocational training program case study - State-approved esthetics curriculum.">
-  <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -113,7 +103,7 @@
     <section class="content"><div class="content-container">
       <div class="content-section"><h2 class="content-title">The Challenge</h2><div class="glass-card"><p class="content-text">Arizona lacked accessible vocational training options for esthetics. At-risk youth in particular had few pathways to licensed, employable careers in the beauty industry.</p><p class="content-text">I saw an opportunity to create something from nothing.</p><ul class="content-list"><li>No existing program to model—had to build from scratch</li><li>Required navigating Arizona State Board regulatory requirements</li><li>Needed to develop state-approved curriculum meeting licensing exam standards</li><li>Had to build facility, recruit students, and establish partnerships simultaneously</li></ul></div></div>
       <div class="content-section"><h2 class="content-title">What I Built</h2>
-        <div class="deliverable-card"><img src="arizona-esthetics-buildout.jpg" alt="Christie Stephenson standing in front of Arizona Esthetics Institute sign during facility build-out"><div class="deliverable-info"><div class="deliverable-type">Physical Evidence</div><h3>Facility Build-Out in Progress</h3><p>That's me, standing in front of the Arizona Esthetics Institute sign during construction. Sawhorses, HVAC materials, and all. This wasn't a consulting gig—<strong>I co-founded this school and built it from the ground up.</strong></p></div></div>
+        <div class="deliverable-card"><img src="samples/arizona-esthetics-buildout.jpg" alt="Christie Stephenson standing in front of Arizona Esthetics Institute sign during facility build-out"><div class="deliverable-info"><div class="deliverable-type">Physical Evidence</div><h3>Facility Build-Out in Progress</h3><p>That's me, standing in front of the Arizona Esthetics Institute sign during construction. Sawhorses, HVAC materials, and all. This wasn't a consulting gig—<strong>I co-founded this school and built it from the ground up.</strong></p></div></div>
       </div>
       <div class="content-section"><h2 class="content-title">Deliverables Created</h2><div class="skill-grid"><div class="skill-card"><h4>ðŸ“š State-Approved Curriculum</h4><p>Complete esthetics program with lesson plans, competency frameworks, and assessments aligned to Arizona licensing requirements</p></div><div class="skill-card"><h4>ðŸ“‹ Instructional Materials</h4><p>Student handbooks, course materials, and practical training guides</p></div><div class="skill-card"><h4>âœ… Assessment Frameworks</h4><p>Competency-based evaluations mapped to state licensing exam objectives</p></div><div class="skill-card"><h4>ðŸ¤ Partnership Agreements</h4><p>School district MOUs creating vocational pathways for at-risk youth</p></div><div class="skill-card"><h4>ðŸ¢ Facility Operations</h4><p>Complete facility build-out, equipment procurement, and compliance documentation</p></div><div class="skill-card"><h4>ðŸ“£ Recruitment Materials</h4><p>Enrollment marketing, community outreach, and student recruitment systems</p></div></div></div>
       <div class="content-section"><h2 class="content-title">The Pattern Continues</h2><div class="pattern-box"><p>Arizona Esthetics Institute (2003-2004) was the first time I built a complete educational program from scratch. A decade later, I would do it again with <a href="xacteched-campaign.html" style="color:#dc2626">XactechED at Xactware</a>.</p><p style="margin-top:1rem"><strong>Same pattern:</strong></p><p>â†’ Identify a skills gap</p><p>â†’ Create a program to address it</p><p>â†’ Navigate regulatory/funding requirements</p><p>â†’ Build awareness and drive enrollment</p><p>â†’ Deliver measurable results</p></div></div>
