fixed email href; email display; cloudflarescript

--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@
       <p class="modal-subtitle">Choose your preferred way to connect</p>
       
       <div class="contact-options">
-        <a href="/cdn-cgi/l/email-protection#92f1fae0fbe1e6fbf7bce1f3f3e4f7f6e0f3d2f5fff3fbfebcf1fdff" class="contact-option">
+        <a href="mailto:christie.saavedra@gmail.com" class="contact-option">
           <div class="contact-option-icon email">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
@@ -1503,7 +1503,7 @@
           </div>
           <div class="contact-option-text">
             <div class="contact-option-label">Email</div>
-            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="37545f455e44435e5219445656415253455677505a565e5b1954585a">[email&#160;protected]</span></div>
+            <div class="contact-option-value">christie.saavedra@gmail.com</div>
           </div>
         </a>
         
@@ -1534,7 +1534,7 @@
     </div>
   </div>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  <script>
     const nav = document.getElementById('nav');
     const backToTop = document.getElementById('backToTop');
     const contactModal = document.getElementById('contactModal');
