Fixed several index files.
index.html:

Changed "View Campaign" → "View Case Study" for XactechED
Removed CodeLab card from main page (now only accessible from inside XactechED case study)

xacteched-campaign.html:

Fixed â†' → → (arrow character)
Fixed ../codelab/index.html → codelab/index.html
Fixed ../index.html → index.html

arizona-esthetics.html:

Fixed encoding issues (em-dash)
Fixed ../index.html → index.html

palmview-lab.html:

Fixed ../index.html → index.html

Main page now shows 5 case studies:

Healthcare Operations Dashboard → "View Demo"
XactechED Workforce Development → "View Case Study" (contains CodeLab demo link inside)
Resolute Services → "View Case Study"
Arizona Esthetics Institute → "View Case Study"
Palmview Lab → "View Case Study"

--- a/index.html
+++ b/index.html
@@ -1235,21 +1235,6 @@
             <a href="dashboard.html" class="case-study-link">View Demo <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           </div>
 
-          <!-- NEW: CodeLab LMS Case Study -->
-          <div class="case-study-card" data-project="codelab" onclick="window.location='codelab/index.html'">
-            <div class="case-study-meta">
-              <span class="case-study-role">Instructional Designer / Developer</span>
-              <span class="case-study-org">· XactechED · Xactware</span>
-            </div>
-            <h3 class="case-study-title">Gamified Learning Platform</h3>
-            <p class="case-study-desc">Built a gamified HTML & CSS learning platform using Hirumi's Three-Level Interaction Model. Features XP system, achievements, and mastery-based progression—demonstrating the curriculum approach I developed for the XactechED program.</p>
-            <div class="case-study-results">
-              <span class="result-tag">6 Interactive Lessons</span>
-              <span class="result-tag">12 Achievements</span>
-            </div>
-            <a href="codelab/index.html" class="case-study-link">Try Demo <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
-          </div>
-
           <div class="case-study-card" data-project="xacteched" onclick="window.location='xacteched-campaign.html'">
             <div class="case-study-meta">
               <span class="case-study-role">Training Manager</span>
@@ -1261,7 +1246,7 @@
               <span class="result-tag">$521,000+ Grants</span>
               <span class="result-tag">MTECH Partnership</span>
             </div>
-            <a href="xacteched-campaign.html" class="case-study-link">View Campaign <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
+            <a href="xacteched-campaign.html" class="case-study-link">View Case Study <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           </div>
 
           <div class="case-study-card" data-project="resolute" onclick="window.location='resolute-services.html'">
