--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XactechED Case Study | Christie Stephenson Saavedra</title>
-  <meta name="description" content="Workforce development program case study - $521,000+ in grants secured for statewide coding education through industry-education partnership.">
+  <title>xactechED Case Study | Christie Stephenson Saavedra</title>
+  <meta name="description" content="Workforce development program case study - $200,000+ in grants secured for statewide coding education through industry-education partnership.">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -183,11 +183,11 @@
           <span class="hero-role">Training Manager</span>
           <span class="hero-org">Xactware · 2014–2015</span>
         </div>
-        <h1 class="hero-title">XactechED Workforce Development Program</h1>
-        <p class="hero-summary">Conceived, built, and launched a first-of-its-kind industry-education partnership that secured $521,000+ in state grants and created a sustainable talent pipeline for Utah's tech industry.</p>
+        <h1 class="hero-title">xactechED Workforce Development Program</h1>
+        <p class="hero-summary">Conceived, built, and launched a first-of-its-kind industry-education partnership that secured $200,000+ in state grants and created a sustainable talent pipeline for Utah's tech industry.</p>
         <div class="results-banner">
           <div class="result-card">
-            <div class="result-number">$521K+</div>
+            <div class="result-number">$200K+</div>
             <div class="result-label">Grants Secured</div>
           </div>
           <div class="result-card">
@@ -269,7 +269,7 @@
         <div class="content-section">
           <h2 class="content-title">Marketing Materials</h2>
           <div class="deliverable-card">
-            <img src="samples/xacteched-flyer.png" alt="XactechED marketing flyer">
+            <img src="samples/xacteched-flyer.png" alt="xactechED marketing flyer">
             <div class="deliverable-info">
               <div class="deliverable-type">Marketing Materials</div>
               <h3>Program Flyer</h3>
@@ -277,7 +277,7 @@
             </div>
           </div>
           <div class="deliverable-card">
-            <img src="samples/xacteched-billboard.png" alt="XactechED Billboard">
+            <img src="samples/xacteched-billboard.png" alt="xactechED Billboard">
             <div class="deliverable-info">
               <div class="deliverable-type">Promotional Signage</div>
               <h3>Program Billboard</h3>
@@ -290,7 +290,7 @@
             </div>
           </div>
           <div class="deliverable-card">
-            <img src="samples/xacteched-landing-page.jpg" alt="XactechED Landing Page">
+            <img src="samples/xacteched-landing-page.jpg" alt="xactechED Landing Page">
             <div class="deliverable-info">
               <div class="deliverable-type">Lead Generation</div>
               <h3>Program Landing Page</h3>
@@ -319,12 +319,12 @@
         <!-- Expanding the Ecosystem -->
         <div class="content-section">
           <h2 class="content-title">Expanding the Ecosystem: à la code</h2>
-          <p class="content-text">XactechED wasn't my only workforce development initiative. I also created <strong>à la code</strong>, a community meetup for internal education and external recruitment.</p>
+          <p class="content-text">xactechED wasn't my only workforce development initiative. I also created <strong>à la code</strong>, a community meetup for internal education and external recruitment.</p>
           <div class="logo-grid">
             <div class="logo-card">
-              <img src="samples/xacteched-logo.png" alt="XactechED Logo">
+              <img src="samples/xacteched-logo.png" alt="xactechED Logo">
               <div class="deliverable-type">External Program</div>
-              <h4>XactechED</h4>
+              <h4>xactechED</h4>
               <p>State-funded workforce pipeline through MTECH partnership</p>
             </div>
             <div class="logo-card">
@@ -335,7 +335,7 @@
             </div>
           </div>
           <div class="deliverable-card">
-            <img src="samples/office-door.png" alt="Office door showing XactechED branding" style="max-width:600px;margin:0 auto;display:block">
+            <img src="samples/office-door.png" alt="Office door showing xactechED branding" style="max-width:600px;margin:0 auto;display:block">
             <div class="deliverable-info" style="text-align:center">
               <div class="deliverable-type">Physical Evidence</div>
               <h3>My Office at Xactware</h3>
@@ -355,7 +355,7 @@
             </div>
             <div class="timeline-item">
               <div class="timeline-date">Early 2015</div>
-              <div class="timeline-content">Developed XactechED brand, curriculum, and partnership strategy</div>
+              <div class="timeline-content">Developed xactechED brand, curriculum, and partnership strategy</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-date">Spring 2015</div>
@@ -396,7 +396,7 @@
           <div class="press-card">
             <div class="deliverable-type">Utah System of Higher Education, April 2015</div>
             <h3>"UCAP announces $3.45M in 2015 grant funding"</h3>
-            <p style="font-size:0.9rem;color:var(--color-text-secondary);margin-top:0.75rem"><em>The XactechED program successfully competed for and received $200,000 from this funding cycle.</em></p>
+            <p style="font-size:0.9rem;color:var(--color-text-secondary);margin-top:0.75rem"><em>The xactechED program successfully competed for and received $200,000 from this funding cycle.</em></p>
             <a href="https://ushe.edu/utah-cluster-acceleration-partnership-announces-3-45m-in-2015-grant-funding-available/" target="_blank">Read full article →</a>
           </div>
           
@@ -493,7 +493,7 @@
         <!-- Interactive Demo -->
         <div class="content-section">
           <h2 class="content-title">Interactive Demo</h2>
-          <p class="content-text" style="margin-bottom:1.5rem">Experience the curriculum approach I developed for the XactechED program. This interactive demo showcases Hirumi's Three-Level Interaction Model applied to web development training.</p>
+          <p class="content-text" style="margin-bottom:1.5rem">Experience the curriculum approach I developed for the xactechED program. This interactive demo showcases Hirumi's Three-Level Interaction Model applied to web development training.</p>
           <a href="codelab/index.html" class="demo-card">
             <div class="demo-icon">
               <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg>
