grant language for xacteched updated.

--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XactechED Case Study | Christie Stephenson Saavedra</title>
-  <meta name="description" content="Workforce development program case study - $521,000+ in grants secured for statewide coding education through industry-education partnership.">
+  <meta name="description" content="Workforce development program case study - Personally secured $200,000 UCAP grant; program grew to $521,000+ in total state funding.">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -184,11 +184,11 @@
           <span class="hero-org">Xactware · 2014–2015</span>
         </div>
         <h1 class="hero-title">XactechED Workforce Development Program</h1>
-        <p class="hero-summary">Conceived, built, and launched a first-of-its-kind industry-education partnership that secured $521,000+ in state grants and created a sustainable talent pipeline for Utah's tech industry.</p>
+        <p class="hero-summary">Conceived, built, and launched a first-of-its-kind industry-education partnership. I personally secured a $200,000 UCAP grant through my presentation to the governor's committee—the program has since grown to $521,000+ in total state funding.</p>
         <div class="results-banner">
           <div class="result-card">
-            <div class="result-number">$521K+</div>
-            <div class="result-label">Grants Secured</div>
+            <div class="result-number">$200K</div>
+            <div class="result-label">Grant I Secured</div>
           </div>
           <div class="result-card">
             <div class="result-number">10</div>
@@ -462,7 +462,8 @@
           <h2 class="content-title">Results</h2>
           <div class="glass-card">
             <ul class="content-list">
-              <li><strong>$521,694+ in state funding secured</strong> through competitive grant processes (UCAP 2015: $200K, DevPath 2016: $221K, Talent Ready 2018: $300K)</li>
+              <li><strong>$200,000 UCAP grant secured</strong> through my presentation to the governor's committee (2015)</li>
+              <li><strong>Program grew to $521,694+ in total state funding</strong> (DevPath 2016: $221K, Talent Ready 2018: $300K)</li>
               <li><strong>MTECH Web Development program launched</strong> creating sustainable talent pipeline</li>
               <li><strong>Mobile Development program funded</strong> as direct follow-up to web development success</li>
               <li><strong>Educational partnerships established</strong> between Xactware, MTECH, and Utah Valley University</li>
