--- a/index.html
+++ b/index.html
@@ -1179,9 +1179,9 @@
           <div class="stat-item">
             <div class="stat-card">
               <div class="stat-number">$200K</div>
-              <div class="stat-sub">Grants</div>
+              <div class="stat-sub">Grant</div>
             </div>
-            <div class="stat-label">Grants Secured</div>
+            <div class="stat-label">Grant Secured</div>
             <div class="stat-desc">State funding</div>
           </div>
           <div class="stat-item">
@@ -1243,7 +1243,7 @@
             <h3 class="case-study-title">Workforce Development Program</h3>
             <p class="case-study-desc">Conceived and launched a statewide coding education program. Built the XactechED brand and delivered presentations to the governor's committee.</p>
             <div class="case-study-results">
-              <span class="result-tag">$200,000+ Grants</span>
+              <span class="result-tag">$200K Grant Secured</span>
               <span class="result-tag">MTECH Partnership</span>
             </div>
             <a href="xacteched-campaign.html" class="case-study-link">View Case Study <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
