updated pages with tracking and removed duplications.

--- a/arizona-esthetics-case-study.html
+++ b/arizona-esthetics-case-study.html
@@ -392,8 +392,4 @@
             <a href="https://christiesaavedra.com/arizona-esthetics.html">🔗 View Full Case Study</a>
         </div>
         <div>
-            christie.saavedra@gmail.com | 813.373.4805 | christiesaavedra.com
-        </div>
-    </footer>
-</body>
-</html>
+            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="23404b514a50574a460d504242554647514263
