--- a/change-management.html
+++ b/change-management.html
@@ -513,10 +513,6 @@
             <h2>Ready to Make Change Stick?</h2>
             <p>I help organizations move from "we have new technology" to "people actually use it effectively."</p>
             <div class="cta-buttons">
-                <a href="mailto:christie.saavedra@gmail.com" class="cta-btn primary">Get in Touch</a>
+                <a href="/cdn-cgi/l/email-protection#5a39322833292e333f74293b3b2c3f3e283b1a3d373b333674393537" class="cta-btn primary">Get in Touch</a>
                 <a href="index.html" class="cta-btn secondary">View Full Portfolio</a>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+            </d
