--- a/christie-saavedra-resume.html
+++ b/christie-saavedra-resume.html
@@ -204,7 +204,7 @@
     <header class="header">
         <div class="name">CHRISTIE STEPHENSON SAAVEDRA</div>
         <div class="contact">
-            Palmetto, FL 34221 | 813.373.4805 | christie.saavedra@gmail.com | 
+            Palmetto, FL 34221 | 813.373.4805 | <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="52313a203b21263b377c213333243736203312353f333b3e7c313d3f">[email&#160;protected]</a> | 
             <a href="https://linkedin.com/in/christiesaavedra">linkedin.com/in/christiesaavedra</a>
         </div>
         <div class="portfolio-callout">📁 Portfolio: christiesaavedra.com — Interactive demos & case studies</div>
@@ -338,8 +338,4 @@
             <strong>Georgia Institute of Technology</strong> — <span class="degree">UX Design Intensive Certificate</span>
         </div>
         <div class="additional-ed">
-            Additional: WGU (IT Business Management) | VSchool (Programming Intensive) | UVU (Digital Marketing, Entrepreneurship)
-        </div>
-    </div>
-</body>
-</html>
+            Additional: WGU (IT Business Ma
