--- a/healthcare-dashboard-case-study.html
+++ b/healthcare-dashboard-case-study.html
@@ -275,8 +275,4 @@
             <a href="https://christiesaavedra.com/dashboard.html">🔗 View Interactive Demo</a>
         </div>
         <div>
-            christie.saavedra@gmail.com | 813.373.4805 | linkedin.com/in/christiesaavedra
-        </div>
-    </footer>
-</body>
-</html>
+            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b0d3d8c2d9c3c4d9d59ec3d1d1c6d5d4c2d1f0d7ddd1d9dc9e
