--- a/healthcare.html
+++ b/healthcare.html
@@ -468,10 +468,6 @@
             <h2>Let's Improve Healthcare Operations Together</h2>
             <p>I understand both the technology and the humans who use it. That's where real improvement happens.</p>
             <div class="cta-buttons">
-                <a href="mailto:christie.saavedra@gmail.com" class="cta-btn primary">Get in Touch</a>
+                <a href="/cdn-cgi/l/email-protection#8ae9e2f8e3f9fee3efa4f9ebebfcefeef8ebcaede7ebe3e6a4e9e5e7" class="cta-btn primary">Get in Touch</a>
                 <a href="dashboard.html" class="cta-btn secondary">View Dashboard Demo</a>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+            </d
