--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKJH0YKZT5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TKJH0YKZT5');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christie Stephenson Saavedra | OCM & Instructional Design</title>
@@ -1479,7 +1487,7 @@
       <p class="modal-subtitle">Choose your preferred way to connect</p>
       
       <div class="contact-options">
-        <a href="mailto:christie.saavedra@gmail.com" class="contact-option">
+        <a href="/cdn-cgi/l/email-protection#8fece7fde6fcfbe6eaa1fceeeef9eaebfdeecfe8e2eee6e3a1ece0e2" class="contact-option">
           <div class="contact-option-icon email">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
@@ -1488,7 +1496,7 @@
           </div>
           <div class="contact-option-text">
             <div class="contact-option-label">Email</div>
-            <div class="contact-option-value">christie.saavedra@gmail.com</div>
+            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="690a011b001a1d000c471a08081f0c0d1b08290e04080005470a0604">[email&#160;protected]</span></div>
           </div>
         </a>
         
@@ -1519,7 +1527,7 @@
     </div>
   </div>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     const nav = document.getElementById('nav');
     const backToTop = document.getElementById('backToTop');
     const contactModal = document.getElementById('contactModal');
@@ -1546,16 +1554,4 @@
     function closeContactModal(event) {
       if (!event || event.target === contactModal) {
         contactModal.classList.remove('active');
-        document.body.style.overflow = '';
-      }
-    }
-
-    // Close modal with Escape key
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape' && contactModal.classList.contains('active')) {
-        closeContactModal();
-      }
-    });
-  </script>
-</body>
-</html>
+        document.body.style.overf
