--- a/instructional-design.html
+++ b/instructional-design.html
@@ -479,10 +479,6 @@
             <h2>Ready to Build Something That Works?</h2>
             <p>I bring 20+ years of experience creating learning that drives real change — not just content that checks a box.</p>
             <div class="cta-buttons">
-                <a href="mailto:christie.saavedra@gmail.com" class="cta-btn primary">Get in Touch</a>
+                <a href="/cdn-cgi/l/email-protection#284b405a415b5c414d065b49495e4d4c5a49684f45494144064b4745" class="cta-btn primary">Get in Touch</a>
                 <a href="index.html" class="cta-btn secondary">View Full Portfolio</a>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+            </d
