--- a/resolute-case-study.html
+++ b/resolute-case-study.html
@@ -361,8 +361,4 @@
             <a href="https://christiesaavedra.com">🔗 View Portfolio</a>
         </div>
         <div>
-            christie.saavedra@gmail.com | 813.373.4805 | christiesaavedra.com
-        </div>
-    </footer>
-</body>
-</html>
+            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="52313a203b21263b377c213333243736203312
