--- a/ux-designer.html
+++ b/ux-designer.html
@@ -398,10 +398,6 @@
             <h2>Let's Create Something Great</h2>
             <p>I bring 20+ years of experience understanding users, stakeholders, and what it takes to make technology adoption succeed.</p>
             <div class="cta-buttons">
-                <a href="mailto:christie.saavedra@gmail.com" class="cta-btn primary">Get in Touch</a>
+                <a href="/cdn-cgi/l/email-protection#ceada6bca7bdbaa7abe0bdafafb8abaabcaf8ea9a3afa7a2e0ada1a3" class="cta-btn primary">Get in Touch</a>
                 <a href="index.html" class="cta-btn secondary">View Full Portfolio</a>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+            </d
