updated hero body ui

--- a/index.html
+++ b/index.html
@@ -270,6 +270,17 @@
       margin-bottom: 1.5rem;
       color: var(--color-text);
     }
+ /* Body paragraphs */
+    .hero-body {
+      font-size: 1.05rem;
+      color: var(--color-text-secondary);
+      line-height: 1.8;
+      margin-bottom: 1.25rem;
+      text-align: center;
+      max-width: 750px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
     .hero-statement {
       font-family: var(--font-display);
