hero body ui colors

--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
       margin-bottom: 1.5rem;
       color: var(--color-text);
     }
- /* Body paragraphs */
+ 
+    /* Body paragraphs */
     .hero-body {
       font-size: 1.05rem;
       color: var(--color-text-secondary);
@@ -281,6 +282,29 @@
       margin-left: auto;
       margin-right: auto;
     }
+
+    .hero-body .highlight-blue {
+      color: #1E40AF;
+      font-weight: 500;
+    }
+
+    .hero-body .highlight-teal {
+      color: #0D9488;
+      font-weight: 500;
+    }
+
+    .hero-body-strong {
+      font-size: 1.05rem;
+      color: var(--color-text);
+      line-height: 1.8;
+      margin-bottom: 1.25rem;
+      text-align: center;
+      max-width: 750px;
+      margin-left: auto;
+      margin-right: auto;
+      font-weight: 500;
+    }
+
 
     .hero-statement {
       font-family: var(--font-display);
