methodology ui components

--- a/index.html
+++ b/index.html
@@ -420,6 +420,237 @@
       font-size: 0.75rem;
       color: var(--color-text-secondary);
     }
+ /* ============================================
+       METHODOLOGY FLOW SECTION
+       ============================================ */
+    .methodology-section {
+      padding: 3rem 2rem;
+      background: var(--color-bg-cream);
+    }
+
+    .methodology-container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .methodology-flow {
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
+      gap: 0.75rem;
+    }
+
+    @media (max-width: 768px) {
+      .methodology-flow {
+        flex-wrap: wrap;
+      }
+    }
+
+    @media (max-width: 500px) {
+      .methodology-flow {
+        flex-direction: column;
+        align-items: center;
+      }
+      .method-arrow {
+        transform: rotate(90deg);
+      }
+    }
+
+    .method-step {
+      background: white;
+      border-radius: 16px;
+      padding: 1.25rem 1.5rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04);
+      border: 1px solid rgba(0, 0, 0, 0.04);
+      text-align: center;
+      flex: 1;
+      max-width: 160px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .method-step::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 3px;
+    }
+
+    .method-step:nth-child(1)::before { background: #1E40AF; }
+    .method-step:nth-child(3)::before { background: #3B82F6; }
+    .method-step:nth-child(5)::before { background: #0D9488; }
+    .method-step:nth-child(7)::before { background: #14B8A6; }
+    .method-step:nth-child(9)::before { background: #059669; }
+
+    .method-step-title {
+      font-family: var(--font-display);
+      font-size: 1.25rem;
+      color: var(--color-text);
+      margin-bottom: 0.25rem;
+    }
+
+    .method-step-desc {
+      font-size: 0.75rem;
+      color: var(--color-text-secondary);
+      line-height: 1.4;
+    }
+
+    .method-arrow {
+      color: var(--color-text-secondary);
+      font-size: 1.25rem;
+      opacity: 0.3;
+      display: flex;
+      align-items: center;
+    }
+
+    /* ============================================
+       IDENTITY CARDS SECTION
+       ============================================ */
+    .identity-section {
+      padding: 3rem 2rem 4rem;
+      background: var(--color-bg-warm);
+    }
+
+    .identity-container {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+
+    .identity-header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .identity-label {
+      font-size: 0.7rem;
+      font-weight: 600;
+      letter-spacing: 0.15em;
+      text-transform: uppercase;
+      background: var(--text-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-bottom: 0.5rem;
+    }
+
+    .identity-title {
+      font-family: var(--font-display);
+      font-size: 1.75rem;
+      color: var(--color-text);
+    }
+
+    .identity-subtitle {
+      font-size: 0.95rem;
+      color: var(--color-text-secondary);
+      margin-top: 0.5rem;
+    }
+
+    /* Card Groups */
+    .card-group {
+      margin-bottom: 2.5rem;
+    }
+
+    .card-group-title {
+      font-size: 0.75rem;
+      font-weight: 600;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: var(--color-text-secondary);
+      margin-bottom: 1rem;
+      padding-left: 0.75rem;
+      border-left: 3px solid;
+    }
+
+    .card-group-title.philosophy { border-color: #1E40AF; }
+    .card-group-title.behaviors { border-color: #0D9488; }
+
+    .identity-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1rem;
+    }
+
+    @media (max-width: 900px) {
+      .identity-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 550px) {
+      .identity-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .identity-card {
+      background: white;
+      border-radius: 16px;
+      padding: 1.5rem 1.25rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04);
+      border: 1px solid rgba(0, 0, 0, 0.04);
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .identity-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.08);
+    }
+
+    .identity-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 3px;
+      background: var(--text-gradient);
+    }
+
+    .identity-icon {
+      width: 48px;
+      height: 48px;
+      margin: 0 auto 0.75rem;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+    }
+
+    /* Philosophy cards */
+    .philosophy .identity-card:nth-child(1) .identity-icon { background: linear-gradient(135deg, #DBEAFE 0%, #BFDBFE 100%); }
+    .philosophy .identity-card:nth-child(2) .identity-icon { background: linear-gradient(135deg, #FEF3C7 0%, #FDE68A 100%); }
+    .philosophy .identity-card:nth-child(3) .identity-icon { background: linear-gradient(135deg, #E0E7FF 0%, #C7D2FE 100%); }
+    .philosophy .identity-card:nth-child(4) .identity-icon { background: linear-gradient(135deg, #D1FAE5 0%, #A7F3D0 100%); }
+    .philosophy .identity-card:nth-child(5) .identity-icon { background: linear-gradient(135deg, #FCE7F3 0%, #FBCFE8 100%); }
+    .philosophy .identity-card:nth-child(6) .identity-icon { background: linear-gradient(135deg, #FEE2E2 0%, #FECACA 100%); }
+
+    /* Behavior cards */
+    .behaviors .identity-card:nth-child(1) .identity-icon { background: linear-gradient(135deg, #CCFBF1 0%, #99F6E4 100%); }
+    .behaviors .identity-card:nth-child(2) .identity-icon { background: linear-gradient(135deg, #D1FAE5 0%, #A7F3D0 100%); }
+    .behaviors .identity-card:nth-child(3) .identity-icon { background: linear-gradient(135deg, #CFFAFE 0%, #A5F3FC 100%); }
+    .behaviors .identity-card:nth-child(4) .identity-icon { background: linear-gradient(135deg, #FEF9C3 0%, #FEF08A 100%); }
+    .behaviors .identity-card:nth-child(5) .identity-icon { background: linear-gradient(135deg, #E0E7FF 0%, #C7D2FE 100%); }
+    .behaviors .identity-card:nth-child(6) .identity-icon { background: linear-gradient(135deg, #F3E8FF 0%, #E9D5FF 100%); }
+
+    .identity-card-title {
+      font-family: var(--font-display);
+      font-size: 1rem;
+      color: var(--color-text);
+      margin-bottom: 0.4rem;
+    }
+
+    .identity-card-desc {
+      font-size: 0.8rem;
+      color: var(--color-text-secondary);
+      line-height: 1.5;
+    }
+
 
     /* ==================== SECTIONS ==================== */
     .section {
