changed background to transparent

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       font-family: var(--font-body);
       color: var(--color-text);
       line-height: 1.6;
-      background: var(--color-bg-warm);
+      background: var(transparent);
     }
 
     /* Page Wrapper with Seamless Background */
@@ -425,7 +425,7 @@
        ============================================ */
     .methodology-section {
       padding: 3rem 2rem;
-      background: var(--color-bg-cream);
+      background: var(transparent);
     }
 
     .methodology-container {
@@ -510,7 +510,7 @@
        ============================================ */
     .identity-section {
       padding: 3rem 2rem 4rem;
-      background: var(--color-bg-warm);
+      background: var(transparent);
     }
 
     .identity-container {
