Accomplishments bar moved to work.

--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
       justify-content: center;
       gap: 1.5rem;
       flex-wrap: wrap;
-      margin-top: 2rem;
-      margin-bottom: 2rem;
+      margin-top: 1rem;
+      margin-bottom: 2.5rem;
     }
 
     .stat-item {
@@ -1680,43 +1680,6 @@
         I dig in, ramp up quickly, and keep building. A growth mindset.
       </p>
 
- <!-- ============================================
-       DOCUMENTED RESULTS
-       ============================================ -->
-        <div class="stats-cards">
-          <div class="stat-item">
-            <div class="stat-card">
-              <div class="stat-number">$200K</div>
-              <div class="stat-sub">Grant</div>
-            </div>
-            <div class="stat-label">Grant Secured</div>
-            <div class="stat-desc">State funding</div>
-          </div>
-          <div class="stat-item">
-            <div class="stat-card">
-              <div class="stat-number">90%</div>
-              <div class="stat-sub">Auto</div>
-            </div>
-            <div class="stat-label">Automation</div>
-            <div class="stat-desc">Healthcare billing</div>
-          </div>
-          <div class="stat-item">
-            <div class="stat-card">
-              <div class="stat-number">50%</div>
-              <div class="stat-sub">Saved</div>
-            </div>
-            <div class="stat-label">Time Saved</div>
-            <div class="stat-desc">Custom solutions</div>
-          </div>
-          <div class="stat-item">
-            <div class="stat-card">
-              <div class="stat-number">3</div>
-              <div class="stat-sub">Ventures</div>
-            </div>
-            <div class="stat-label">Co-Founded</div>
-            <div class="stat-desc">IT & education</div>
-          </div>
-        </div>
       </div>
     </section>
  
@@ -1815,6 +1778,42 @@
         <div class="section-header">
           <div class="section-label">Featured Work</div>
           <h2 class="section-title">Case Studies</h2>
+        </div>
+
+        <!-- Documented Results -->
+        <div class="stats-cards">
+          <div class="stat-item">
+            <div class="stat-card">
+              <div class="stat-number">$200K</div>
+              <div class="stat-sub">Grant</div>
+            </div>
+            <div class="stat-label">Grant Secured</div>
+            <div class="stat-desc">State funding</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-card">
+              <div class="stat-number">90%</div>
+              <div class="stat-sub">Auto</div>
+            </div>
+            <div class="stat-label">Automation</div>
+            <div class="stat-desc">Healthcare billing</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-card">
+              <div class="stat-number">50%</div>
+              <div class="stat-sub">Saved</div>
+            </div>
+            <div class="stat-label">Time Saved</div>
+            <div class="stat-desc">Custom solutions</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-card">
+              <div class="stat-number">3</div>
+              <div class="stat-sub">Ventures</div>
+            </div>
+            <div class="stat-label">Co-Founded</div>
+            <div class="stat-desc">IT & education</div>
+          </div>
         </div>
 
         <div class="case-studies-grid">
